# home

./: .bash_profile  .bashrc  .default-npm-packages  .default-python-packages  .fzfcd  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .pdata-wsl.properties  .pdata.properties  .profile  .sops.yaml  .tmux.conf  .tool-versions  .vimrc  Brewfile  CHANGELOG.md  Default.bttpreset  README.md  get-buvis.bat  get-buvis.sh  install  install.ps1  secret-file.secret  test-encrypt.md.secret
.claude/skills/zettelmaster/: SKILL.md  pyproject.toml
.claude/skills/zettelmaster/docs/: methodology.md  relationship_placement_guide.md
.claude/skills/zettelmaster/scripts/: __init__.py  archive_inbox.py  asset_manager.py  config.py  directory_scanner.py  file_manager.py  orchestrate_ingestion.py  relation_checker.py  semantic_analyzer.py  test_archiving.py  test_integration.py  test_mandatory_fields.py  test_noise_filtering.py  (+6 more)
.vim/: pyproject.toml
.vim/after/ftplugin/: python.vim  vimwiki.vim
.vim/after/plugin/: NERDCommenter.vim  indentLine.vim
.vim/after/syntax/: vimwiki.vim
.vim/autoload/buvis/: functions.vim
.vim/autoload/wincent/: autocmds.vim  functions.vim
.vim/ftplugin/: css.vim  html.vim  javascript.vim  json.vim  markdown.vim  python.vim  rust.vim  svelte.vim  vim.vim  yaml.vim
.vim/plugin/: autocmds.vim  behavior.vim  lookfeel.vim  lsp.vim  navigation.vim  plugins.vim  settings.vim
.vim/plugin/mapping/: visual.vim
.vim/plugin/mappings/: command.vim  input.vim  leader.vim  normal.vim  terminal.vim  visual.vim
.vim/plugin/settings/: file.vim  folding.vim  lookfeel.vim  sane_defaults.vim  spaces_as_tabs.vim
(+1217 files in other folders)
