[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zettelmaster"
version = "0.1.0"
description = "Mechanical toolkit for Claude-driven Zettelkasten workflows"
readme = "SKILL.md"
requires-python = ">=3.10"
authors = [{ name = "Claude Codex" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2.0",
    "black>=24.4",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zettelmaster = [
    "resources/**/*",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
    "tests",
    "src/zettelmaster",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["zettelmaster"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict = false
mypy_path = ["src"]
